--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.26.0",
+    "@tanstack/react-query-devtools": "^4.26.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "encoding": "^0.1.13",
+    "ioredis": "^5.3.1",
     "next": "13.2.3",
+    "next-auth": "^4.20.1",
+    "pusher": "^5.1.2",
+    "pusher-js": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-timeago": "^7.1.0",
+    "tailwindcss": "^3.2.7",
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   }
 }
