--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.26.0",
-    "@tanstack/react-query-devtools": "^4.26.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -23,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-timeago": "^7.1.0",
+    "swr": "^2.1.0",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
   },
