--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/react-timeago": "^4.1.3",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
